objects/Jira_Obj__c.object
<CustomObject>
    <fields>
        <fullName>Dec_11_test1__c</fullName>
        <label>Dec 11 test1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_2__c</fullName>
        <label>Jira 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_field__c</fullName>
        <label>Jira field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userstory_DF__c</fullName>
        <label>DF userstory3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Jira Obj</label>
    <nameField>
        <label>Jira Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>